app/stylus/sections/hotels.styl
// Hotels

.hotels
  padding: 0

  #hotel-title
    color: orange

  .hotel-column
    float: none
    position: relative
    display: inline-block
    &:nth-child(3n+1)
      background: $teal
    &:nth-child(3n+2)
      background: $teal-drk
    &:nth-child(3n)
      background: darken($teal,50%)
    // margin: 0.5% 0.5%

    .hotel
      background: inherit
      position: relative

      .hotel-panel
        position: relative
        background: inherit

        .hotel-image
          width: 100%
          height: auto

        .hotel-price
          padding: 1% 2%
          text-align: center
          position: absolute
          background: inherit
          font-weight: bold
          color: white
          top: 45%
          opacity: 0.8
          z-index: 3

      .hotel-info
        text-align: left
        background: inherit
        color: white
        margin: 15px

        p, address
          margin-bottom: 0px

        .left, .right
          display: inline-block

        .left h3
          margin-bottom: 22px

        .left
          width: 55%

        .right
          width: 45%

        .bottom
          margin-top: 5px
          margin-bottom: 5px

        .fa
          color: white
          margin-right: 3px

        a
          color: white

    .overlay
      background: black
      position: absolute
      width: 100%
      height: 0
      top: 0
      left: 0
      opacity: .5
      z-index: 1
      text-align: center

      h2
        margin-top: 20%
        margin-bottom: 10%

      i
        margin-right: 3px

      .close-overlay
        display: block
        position: absolute
        top: 0
        right: 0
        z-index: 2
        background: white
        color: black
        width: 25px
        height: 25px
        text-align: center

        i
          margin-top: 4px

      .close-overlay.hidden
        display: none

      .expand
        display: none
        z-index: 2
        color: white

        .fa
          color: white

// Hover Effect

  .hotel .overlay
    opacity: 0

  .hotel.hover .overlay
    height: 100%
    opacity: 1

    // a.close-overlay.hidden
    //   display: block

    .expand
      display: block

// Single Column
  @media screen and (max-width: $small-width)
    .hotel-column
      width: 100%

// Three columns
  @media screen and (min-width: $small-width + 1px)
    #hotel-title
    .hotel-column
      width: 33.33%

